--- a/app/src/main/res/layout/regin.xml
+++ b/app/src/main/res/layout/regin.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#1a1a1a">
 
     <TextView
         android:id="@+id/name"
@@ -14,7 +15,8 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/AccentColor"/>
 
     <TextView
         android:id="@+id/textLogin"
@@ -23,6 +25,7 @@
         android:layout_marginLeft="60dp"
         android:layout_marginTop="60dp"
         android:text="Введите логин:"
+        android:textColor="#b0b0b0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name"/>
 
@@ -34,15 +37,19 @@
         android:layout_marginRight="60dp"
         android:layout_marginTop="10dp"
         android:hint="Логин"
+        android:textColorHint="@color/TextHintColor"
+        android:textColor="@color/TextSecondaryColor"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textLogin"/>
+        app:layout_constraintTop_toBottomOf="@+id/textLogin"
+        android:background="@drawable/textbox"/>
     
     <TextView
         android:id="@+id/textPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#b0b0b0"
         android:layout_marginLeft="60dp"
         android:layout_marginTop="20dp"
         android:text="Придумайте пароль:"
@@ -59,6 +66,8 @@
         android:layout_marginTop="10dp"
         android:inputType="textPassword"
         android:hint="Пароль"
+        android:textColorHint="@color/TextHintColor"
+        android:background="@drawable/textbox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textPassword"/>
@@ -70,6 +79,7 @@
         android:layout_marginLeft="60dp"
         android:layout_marginTop="20dp"
         android:text="Введите номер телефона:"
+        android:textColor="#b0b0b0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"/>
 
@@ -83,6 +93,8 @@
         android:layout_marginTop="10dp"
         android:inputType="phone"
         android:hint="Номер телефона"
+        android:textColorHint="@color/TextHintColor"
+        android:background="@drawable/textbox"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textNumber"/>
@@ -95,8 +107,9 @@
         android:layout_marginRight="80dp"
         android:layout_marginTop="50dp"
         android:text="Регистрация"
-        android:textColor="@color/black"
-        android:textAllCaps="false"
+        android:textColor="@color/TextColor"
+        android:textAllCaps="true"
+        android:background="@drawable/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/number"/>
