--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,11 +10,11 @@
     <ImageView
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:src="@drawable/ic_restaurant"
+        android:background="@drawable/q3"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="60dp"
         android:layout_marginBottom="40dp"
-        android:tint="@color/AccentColor" />
+        app:tint="@color/AccentColor" />
 
     <TextView
         android:layout_width="wrap_content"
