--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -23,10 +23,9 @@
                 android:id="@+id/backButton"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:src=""
                 android:background="@drawable/q3"
                 android:layout_marginEnd="16dp"
-                android:tint="@color/TextColor" />
+                app:tint="@color/TextColor" />
 
             <TextView
                 android:layout_width="0dp"
@@ -153,7 +152,7 @@
                     android:layout_marginBottom="16dp"
                     android:visibility="gone" />
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/confirmBookingButton"
                     android:layout_width="match_parent"
                     android:layout_height="56dp"
