--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -26,7 +26,7 @@
                 android:layout_height="48dp"
                 android:background="@drawable/q3"
                 android:layout_marginEnd="16dp"
-                android:tint="@color/white" />
+                app:tint="@color/white" />
 
             <TextView
                 android:layout_width="0dp"
@@ -73,7 +73,7 @@
                     android:textColor="@color/TextSecondaryColor"
                     android:layout_marginBottom="24dp" />
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/logoutButton"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
