--- a/app/src/main/res/layout/activity_restaurant_list.xml
+++ b/app/src/main/res/layout/activity_restaurant_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,7 +20,7 @@
             android:layout_height="48dp"
             android:background="@drawable/q3"
             android:layout_marginEnd="16dp"
-            android:tint="@color/white" />
+            app:tint="@color/white" />
 
         <TextView
             android:layout_width="0dp"
@@ -34,9 +35,11 @@
             android:id="@+id/profileButton"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:src="@drawable/ic_profile"
+            android:src="@drawable/r5"
+            android:scaleType="centerInside"
+            android:padding="8dp"
             android:background="?android:attr/selectableItemBackgroundBorderless"
-            android:tint="@color/white" />
+            app:tint="@color/white" />
 
     </LinearLayout>
 
